refactor: drop legacy session related code
