# docs/swagger.json
@@ -1842,12 +1842,6 @@
                         "$ref": "#/definitions/dto.ActivityResponse"
                     }
                 },
-                "session_trend": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.DashboardTrendItem"
-                    }
-                },
                 "stats": {
                     "$ref": "#/definitions/dto.AdminStatsResponse"
                 },
@@ -1878,9 +1872,6 @@
                     "type": "integer"
                 },
                 "program_count": {
-                    "type": "integer"
-                },
-                "session_count": {
                     "type": "integer"
                 },
                 "user_count": {
